Code Cleanup (Model)